# streamproc

./: .ghci  .gitignore  .travis.yml  Makefile  README  package.conf.in  prologue.txt  streamproc.cabal
.github/workflows/: haskell-ci.yml
Control/Arrow/: SP.hs
experim/: contT-io.hs  makefile  sp-test.hs
