Name:                   streamproc
Version:                1.6.2
Copyright:              (c) 2004-2013 Shawn Garbett and Peter Simons
License:                BSD3
License-File:           LICENSE
Author:                 Shawn Garbett <shawn@garbett.org>, Peter Simons <simons@cryp.to>
Maintainer:             Peter Simons <simons@cryp.to>
Homepage:               https://github.com/peti/streamproc
Category:               Control
Synopsis:               Stream Processer Arrow
Description:            A continuation-based stream processor implemented as an
                        Arrow. This version generalizes the SP type described
                        in John Hughes \"Generalising Monads to Arrows\" to
                        function as a wrapper for arbitrary monads.
Cabal-Version:          >= 1.8
Build-Type:             Simple
tested-with:            GHC == 7.10.3, GHC == 8.0.2, GHC == 8.2.2, GHC == 8.4.4, GHC == 8.6.5,
                        GHC == 8.8.4, GHC == 8.10.7, GHC == 9.0.2, GHC == 9.2.5, GHC == 9.4.4

Source-Repository head
  Type:                 git
  Location:             https://github.com/peti/streamproc.git

Library
  Build-Depends:        base > 4.8 && < 4.13
  Exposed-Modules:      Control.Arrow.SP
